// Copied from stellar/go/protos/ingest/asset/asset.proto
// Needed as a dependency for token_transfer_event.proto

syntax = "proto3";

package asset;

option go_package = "github.com/stellar/go/asset";


message IssuedAsset {
  string asset_code = 1;               // Asset code (e.g., USD, BTC)
  string issuer = 2;                  // Issuer account address
}

// Asset message that can represent either a native asset or an issued asset
message Asset {
  oneof asset_type {
    bool native = 1;                  // Native asset (XLM)
    IssuedAsset issued_asset = 2;      // Issued asset - via classic operations.
  }
}